Refactor and enhance tie line merging logic
Signed-off-by: Leclerc Clement <clement.leclerc@rte-france.com>